[package]
name = "benchmark"
version = "0.1.0"
edition = "2024"

[dependencies]
num-bigint = "0.4.6"
clap = { version = "4.5", features = ["derive"] }
curve25519-dalek = "4.1.3"
ed25519-dalek = "2.1.0"
hkdf = "0.12"
rand = "0.9"
sha2 = "0.10"
x25519-dalek = "2.0.0"
libsignal-core = { git = "https://github.com/signalapp/libsignal.git", tag = "v0.72.1" }
libsignal-protocol = { git = "https://github.com/signalapp/libsignal.git", tag = "v0.72.1" }
